# Google-Dork-Scanner

./: README.md  analyze.py  gds.py  pyproject.toml  requirements.txt  tor-configure.py
gds/: dorks.json  gds.py
